--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,83 @@
-.App {
-  text-align: center;
+.body {
+  display: flex;
+  flex-direction: column; 
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main-body {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #11171d;
+  min-height: 80rem;
+  margin-left: 20rem;
+  padding-top: 5rem;
 }
 
-.App-link {
-  color: #61dafb;
+.inner-body {
+  display: flex;
+  flex-direction: row;
+  height:10rem
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.movie-body {
+  display: flex;
+  flex-direction: column;
+  width: 566px;
+  height: 170px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+  background-color: #15202a;
+  margin-left: 25rem;
+  margin-bottom: 0.1rem;
+  /* padding-top: 5rem; */
+  /* padding-bottom: 5rem; */
+}
+
+
+.movie-poster {
+  margin-left: 24px;
+  margin-top: 17px;
+  border-radius: 50%;
+  width: 128px;
+  height: 128px;
+}
+  
+.picture{
+  width:128px;
+  height:128px;
+}
+.movie-title {
+  display: flex;
+  flex-direction: row;
+  margin-left: 15px;
+  margin-top: 19px;
+  min-width: 85px;
+  height: 17px;
+  font-family: HelveticaNeue;
+  font-size: 18px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: -0.6px;
+  color: #ffffff;
+  background-color: green;
+}
+
+.movie-rating{
+  display:flex;
+  flex-direction: row;
+  margin-left: 15px;
+  margin-top: 19px;
+  min-width: 85px;
+  color: #ffffff;
+}
+.movie-description{
+  display:flex;
+  flex-direction: row;
+  margin-left: 15px;
+  margin-top: 19px;
+  min-width: 85px;
+  color: #ffffff;
+  padding-bottom: 90px;
+
 }
