--- a/src/App.css
+++ b/src/App.css
@@ -1,83 +1,39 @@
-.body {
-  display: flex;
-  flex-direction: column; 
+.app-container{
+  background-color: #000000;
+
+}
+
+.navbar{
+  background-color: #121212;
+  height:4rem;
+  color:white;
+}
+
+.navbar-nav{
+  background-color: #121212;
+  font-family: Roboto, Helvetica;
+  font-size: 16px;
+  letter-spacing: 0.28px;
+  line-height:24px;
+}
+
+.nav-home{
+  color:white;
+  text-decoration: none;
+  font-size: 20px;
+  padding-left: 2rem;
+}
+
+.nav-logout{
+  text-decoration: none;
+  margin-left: 112rem;
   
 }
-
-.main-body {
-  display: flex;
-  flex-direction: column;
-  background-color: #11171d;
-  min-height: 80rem;
-  margin-left: 20rem;
-  padding-top: 5rem;
-}
-
-.inner-body {
-  display: flex;
-  flex-direction: row;
-  height:10rem
-}
-
-.movie-body {
-  display: flex;
-  flex-direction: column;
-  width: 566px;
-  height: 170px;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
-  background-color: #15202a;
-  margin-left: 25rem;
-  margin-bottom: 0.1rem;
-  /* padding-top: 5rem; */
-  /* padding-bottom: 5rem; */
+.home-link{
+  width:30px;
+  padding-top: 10px;
 }
 
 
-.movie-poster {
-  margin-left: 24px;
-  margin-top: 17px;
-  border-radius: 50%;
-  width: 128px;
-  height: 128px;
-}
-  
-.picture{
-  width:128px;
-  height:128px;
-}
-.movie-title {
-  display: flex;
-  flex-direction: row;
-  margin-left: 15px;
-  margin-top: 19px;
-  min-width: 85px;
-  height: 17px;
-  font-family: HelveticaNeue;
-  font-size: 18px;
-  font-weight: 500;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: normal;
-  letter-spacing: -0.6px;
-  color: #ffffff;
-  background-color: green;
-}
 
-.movie-rating{
-  display:flex;
-  flex-direction: row;
-  margin-left: 15px;
-  margin-top: 19px;
-  min-width: 85px;
-  color: #ffffff;
-}
-.movie-description{
-  display:flex;
-  flex-direction: row;
-  margin-left: 15px;
-  margin-top: 19px;
-  min-width: 85px;
-  color: #ffffff;
-  padding-bottom: 90px;
 
-}
