--- a/src/HomePage/home.css
+++ b/src/HomePage/home.css
@@ -90,3 +90,21 @@
   
   }
   
+
+
+  .btn-like {
+    background-color: #23aa4e;
+    border-color: #177d37;
+    height:25px;
+    width:75px;
+  }
+  
+  #example {
+    margin: 3rem;
+  }
+  
+  .buttonContainer {
+    border: 1px solid black;
+    height:25px;
+    width:75px;
+  }
